@@ -3,6 +3,7 @@ Current Version: @@VERSION@@
 ctags-5.2.4 (Sun Apr 14 2002)
 * Added support for RISC OS platform, contributed by Andrew Wingate.
 * Added support for "#pragma weak", generating macro tags for weak symbols [C].
+* Fixed portability problem [MingW32, Bug #541997].
 * Fixed bug in configure script [Solaris, Bug #542966].
 * Fixed invalid package name tags [Perl].
 * Fixed spurious tag for clients portion of feature clause when following
